Bugs and issus are solve

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "cSpell.words": [
-        "productdata"
+        "productcounter",
+        "productdata",
+        "productprice",
+        "userdeatils"
     ]
 }
